sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:8: error: '(' expected but identifier found.
  while aBouger == true ){
        ^AlgCombSort:22: error: illegal start of simple expression
} 
^